--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styleSheet/style.css">
 </head>
 <body>
     <h1>hello git hub</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium numquam quidem mollitia exercitationem enim! Hic veritatis eveniet magni dolorem deleniti officiis nam error maxime tenetur ex, nostrum ullam iure voluptatibus.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium numquam quidem mollitia exercitationem enim! Hic veritatis eveniet magni dolorem deleniti officiis nam error maxime tenetur ex, nostrum ullam iure voluptatibus.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium numquam quidem mollitia exercitationem enim! Hic veritatis eveniet magni dolorem deleniti officiis nam error maxime tenetur ex, nostrum ullam iure voluptatibus.</p>
+    </div>
+
+    <h1>list git push system</h1>
+    <ul>
+        <li>add .</li>
+        <li>git commit</li>
+        <li>git push</li>
+    </ul>
 </body>
+
 </html>
