--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium numquam quidem mollitia exercitationem enim! Hic veritatis eveniet magni dolorem deleniti officiis nam error maxime tenetur ex, nostrum ullam iure voluptatibus.</p>
     </div>
 
+  <div>
     <h1>list git push system</h1>
     <ul>
         <li>add .</li>
         <li>git commit</li>
         <li>git push</li>
     </ul>
+  </div>
 </body>
 
 </html>
